fix weird white space

--- a/frontend/src/components/recipe/recipe_index.css
+++ b/frontend/src/components/recipe/recipe_index.css
@@ -1,6 +1,6 @@
 
 .all{
-  height: 100%;
+  height: 100vh;
   width: 100vw;
   display: flex;
   flex-wrap: wrap;
